tests/NormalTests/paczka1/fuzzy1/25326804.err
Error in line 1: Ch5JV8AJANt A880 15,9
Error in line 4: Ch5JV8AJANt A454 55,5
Error in line 20: glFrCbU A880 222,6
Error in line 19: MVEC A185 148,7
Error in line 26: Ch5JV8AJANt A185 23,2
Error in line 33: i6onOVPM5RQ A880 38,5
Error in line 25: MVEC A454 37,8
